--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -33,19 +33,19 @@
     <meta name="description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="Sparkt">
+    <meta name="twitter:site" content="@Html.Raw("@")Sparkt">
     <meta name="twitter:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai, India">
     <meta name="twitter:description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
-    <meta name="twitter:creator" content="Sparkt">
-    <meta name="twitter:image" content="~/Content/images/spaktLogoFB.jpg" />
+    <meta name="twitter:creator" content="@Html.Raw("@")Sparkt">
+    <meta name="twitter:image" content="http://sparkt.in/Content/images/spakt.png" />
     <!-- Open Graph data -->
     <meta property="og:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai, India" />
     <meta property="og:url" content="http://www.sparkt.in" />
     <meta property="og:description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers." />
-    <meta property="og:site_name" content="Sparkt" />
+    <meta property="og:site_name" content="@Html.Raw("@")Sparkt" />
     <meta property="og:type" content="website" />
     <meta property="fb:admins" content="306588899709911" />
-    <meta property="og:image" content="~/Content/images/spaktLogoFB.jpg" />
+    <meta property="og:image" content="http://sparkt.in/Content/images/spakt.png" />
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai, India">
     <meta itemprop="description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
