--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -15,12 +15,12 @@
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="Sparkt">
-    <meta name="twitter:title" content="Sparkt Work | @ViewBag.MetaTitle">
+    <meta name="twitter:title" content="@ViewBag.MetaTitle">
     <meta name="twitter:description" content="@ViewBag.MetaDescription">
     <meta name="twitter:creator" content="Sparkt">
     <meta name="twitter:image" content="@ViewBag.MetaImage" />
     <!-- Open Graph data -->
-    <meta property="og:title" content="Sparkt Work |  @ViewBag.MetaTitle" />
+    <meta property="og:title" content="@ViewBag.MetaTitle" />
     <meta property="og:url" content="@ViewBag.MetaURL"/>
     <meta property="og:description" content="@ViewBag.MetaDescription" />
     <meta property="og:site_name" content="Sparkt" />
@@ -28,7 +28,7 @@
     <meta property="fb:admins" content="306588899709911" />
     <meta property="og:image" content="@ViewBag.MetaImage" />
     <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Sparkt Work | @ViewBag.MetaTitle">
+    <meta itemprop="name" content="@ViewBag.MetaTitle">
     <meta itemprop="description" content="@ViewBag.MetaDescription">
     <!-- CSS -->
     <link type="text/css" rel="stylesheet" media="screen,projection" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
