--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -68,7 +68,7 @@
         <li class="one-plus"><a href="#" data-related="oneplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/oneplus.png" alt="" /></a> </li>
         <li class="piramal"><a href="#" data-related="piramal" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/piramal.png" alt="" /></a> </li>
         <li class="usports"><a href="#" data-related="usports" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/usports.png" alt="" /></a> </li>
-        <li class="bql"><a href="#" data-related="boutique" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/boutique.png" alt="" /></a> </li>      
+        @*<li class="bql"><a href="#" data-related="editage" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/editage.png" alt="" /></a> </li>*@      
         
         
     </ul>
