--- a/Sparkt.WebApp/Views/work/DancePlus2.cshtml
+++ b/Sparkt.WebApp/Views/work/DancePlus2.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Dance+2";
+    ViewBag.Title = "Sparkt | Star Plus | Dance+2";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Dance+2";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | Dance+2";
     ViewBag.MetaDescription = "Getting the nation to dance to our tune with <br>video innovations and thumbstopping content";
     ViewBag.MetaURL = "http://sparkt.in/work/DancePlus2";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/danceplus-thum.jpg";
