--- a/Sparkt.WebApp/Views/work/Dhoni.cshtml
+++ b/Sparkt.WebApp/Views/work/Dhoni.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | M.S. Dhoni - The Untold Story";
+    ViewBag.Title = "Sparkt | Star Plus | M.S. Dhoni - The Untold Story";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "M.S. Dhoni - The Untold Story";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | M.S. Dhoni - The Untold Story";
     ViewBag.MetaDescription = "Thumb-stopping digital campaign to build excitement for World Television Premiere";
     ViewBag.MetaURL = "http://sparkt.in/work/Dhoni";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ms-dhoni-thum.jpg";
