--- a/Sparkt.WebApp/Views/work/HSPubh.cshtml
+++ b/Sparkt.WebApp/Views/work/HSPubh.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Har Shaakh Pe Ullu Baithaa Hai";
+    ViewBag.Title = "Sparkt | Star Plus | Har Shaakh Pe Ullu Baithaa Hai";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Har Shaakh Pe Ullu Baithaa Hai";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | Har Shaakh Pe Ullu Baithaa Hai";
     ViewBag.MetaDescription = "Kya Ullu Banaya";
     ViewBag.MetaURL = "http://sparkt.in/work/HSPubh";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/hsubh-thum.jpg";
