--- a/Sparkt.WebApp/Views/work/Ikyawann.cshtml
+++ b/Sparkt.WebApp/Views/work/Ikyawann.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Ikyawann";
+    ViewBag.Title = "Sparkt | Star Plus | Ikyawann";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Ikyawann";
-    ViewBag.MetaDescription = "Not a shaadi material";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | Ikyawann";
+    ViewBag.MetaDescription = "Not shaadi material";
     ViewBag.MetaURL = "http://sparkt.in/work/Ikyawann";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ikyawann-thum.jpg";
 }
