--- a/Sparkt.WebApp/Views/work/IndiaRF.cshtml
+++ b/Sparkt.WebApp/Views/work/IndiaRF.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | India RF";
+    ViewBag.Title = "Sparkt | Piramal | India RF";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "India RF";
+    ViewBag.MetaTitle = "Sparkt | Piramal | India RF";
     ViewBag.MetaDescription = "One Vision. 2x the Impact.";
     ViewBag.MetaURL = "http://sparkt.in/work/IndiaRF";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/india-rf-thum.jpg";
