--- a/Sparkt.WebApp/Views/work/IshqBaaaz.cshtml
+++ b/Sparkt.WebApp/Views/work/IshqBaaaz.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Ishqbaaaz";
+    ViewBag.Title = "Sparkt | Star Plus | Ishqbaaaz";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Ishqbaaaz";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | Ishqbaaaz";
     ViewBag.MetaDescription = "Bringing alive the characters of the three brothers and their special bond with exclusive digital content";
     ViewBag.MetaURL = "http://sparkt.in/work/IshqBaaaz";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ishqbaaaz-thum.jpg";
