--- a/Sparkt.WebApp/Views/work/JungleBook.cshtml
+++ b/Sparkt.WebApp/Views/work/JungleBook.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | The Jungle Book";
+    ViewBag.Title = "Sparkt | Star Plus | The Jungle Book";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "The Jungle Book";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | The Jungle Book";
     ViewBag.MetaDescription = "Bringing alive the characters of the three brothers and their special bond with exclusive digital content";
     ViewBag.MetaURL = "http://sparkt.in/work/JungleBook";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/junglebook-thum.jpg";
