--- a/Sparkt.WebApp/Views/work/Khichdi.cshtml
+++ b/Sparkt.WebApp/Views/work/Khichdi.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Khichdi";
+    ViewBag.Title = "Sparkt | Star Plus | Khichdi";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Khichdi";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | Khichdi";
     ViewBag.MetaDescription = "Digital exclusive content to introduce iconic characters";
     ViewBag.MetaURL = "http://sparkt.in/work/Khichdi";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/khichadi-thum.jpg";
