--- a/Sparkt.WebApp/Views/work/Kullfi.cshtml
+++ b/Sparkt.WebApp/Views/work/Kullfi.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Kulfi";
+    ViewBag.Title = "Sparkt | Star Plus | Kulfi";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Kulfi";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | Kulfi";
     ViewBag.MetaDescription = "She sings about anything!";
     ViewBag.MetaURL = "http://sparkt.in/work/Kullfi";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/kullfi-thum.jpg";
