--- a/Sparkt.WebApp/Views/work/MadeByMom.cshtml
+++ b/Sparkt.WebApp/Views/work/MadeByMom.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Made By Mom";
+    ViewBag.Title = "Sparkt | Star Plus | Made By Mom";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Made By Mom";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | Made By Mom";
     ViewBag.MetaDescription = "Igniting a Nayi Soch on Mother’s Day";
     ViewBag.MetaURL = "http://sparkt.in/work/MadeByMom";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mouthers-day-thum.jpg";
