--- a/Sparkt.WebApp/Views/work/MahindraMMF.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraMMF.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | MMF WEBSITE";
+    ViewBag.Title = "Sparkt | Mahindra Mutual Fund | MMF WEBSITE";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = " MMF WEBSITE";
+    ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF WEBSITE";
     ViewBag.MetaDescription = "Conversational interface for enchanced experience";
     ViewBag.MetaURL = "http://sparkt.in/work/MahindraMMF";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mmf-thum.jpg";
