--- a/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | MMF NFO Launches";
+    ViewBag.Title = "Sparkt | Mahindra Mutual Fund | MMF NFO Launches";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = " MMF NFO Launches";
+    ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF NFO Launches";
     ViewBag.MetaDescription = "Seamless integration of traditional and digital media.";
     ViewBag.MetaURL = "http://sparkt.in/work/MahindraNfoLaunches";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mmf-info-thum.jpg";
