--- a/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
+++ b/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Nach Baliye 8";
+    ViewBag.Title = "Sparkt | Star Plus | Nach Baliye 8";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Nach Baliye 8";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | Nach Baliye 8";
     ViewBag.MetaDescription = "Bringing alive the Romance-wala Dance";
     ViewBag.MetaURL = "http://sparkt.in/work/NachBaliye8";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/nach-baliye-8-thum.jpg";
