--- a/Sparkt.WebApp/Views/work/NayiSoch.cshtml
+++ b/Sparkt.WebApp/Views/work/NayiSoch.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Nayi Soch";
+    ViewBag.Title = "Sparkt | Star Plus | Nayi Soch";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Nayi Soch";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | Nayi Soch";
     ViewBag.MetaDescription = "Wear your Mothers name with pride";
     ViewBag.MetaURL = "http://sparkt.in/work/NayiSoch";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/nayosoch-thum.jpg";
