--- a/Sparkt.WebApp/Views/work/OnePlus.cshtml
+++ b/Sparkt.WebApp/Views/work/OnePlus.cshtml
@@ -1,13 +1,13 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | OnePlus";
+    ViewBag.Title = "Sparkt | One Plus | OnePlus";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "OnePlus";
+    ViewBag.MetaTitle = "Sparkt | One Plus | OnePlus";
     ViewBag.MetaDescription = "The power of 5 in customer care";
     ViewBag.MetaURL = "http://sparkt.in/work/OnePlus";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/oneplus-thum.jpg";
 }
-@section BodyClass {one-plus}
+@section BodyClass {one -plus}
 <main>
     <div class="section">
         <div class="work-banner">
