--- a/Sparkt.WebApp/Views/work/PiramalCapital.cshtml
+++ b/Sparkt.WebApp/Views/work/PiramalCapital.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Piramal Capital";
+    ViewBag.Title = "Sparkt | Piramal | Piramal Capital";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Piramal Capital";
+    ViewBag.MetaTitle = "Sparkt | Piramal | Piramal Capital";
     ViewBag.MetaDescription = "Values create value";
     ViewBag.MetaURL = "http://sparkt.in/work/PiramalCapital";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/piramalcapital-thum.jpg";
