--- a/Sparkt.WebApp/Views/work/Pow.cshtml
+++ b/Sparkt.WebApp/Views/work/Pow.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | POW - Bandi Yuddh Ke";
+    ViewBag.Title = "Sparkt | Star Plus | POW - Bandi Yuddh Ke";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "POW - Bandhi Yuddh Ke";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | POW - Bandi Yuddh Ke";
     ViewBag.MetaDescription = "A first-of-a-kind banner that created true 'shock' value";
     ViewBag.MetaURL = "http://sparkt.in/work/Pow";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/pow-thum.jpg";
