--- a/Sparkt.WebApp/Views/work/Swp.cshtml
+++ b/Sparkt.WebApp/Views/work/Swp.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Star Writers Program";
+    ViewBag.Title = "Sparkt | Star | Star Writers Program";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Star Writers Program";
+    ViewBag.MetaTitle = "Sparkt | Star | Star Writers Program";
     ViewBag.MetaDescription = "Creating Indias first university program for creative writers";
     ViewBag.MetaURL = "http://sparkt.in/work/Swp";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/swp-thum.jpg";
