--- a/Sparkt.WebApp/Views/work/Ted.cshtml
+++ b/Sparkt.WebApp/Views/work/Ted.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | TED TALKS";
+    ViewBag.Title = "Sparkt | Star Plus | TED TALKS";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "TED TALKS";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | TED TALKS";
     ViewBag.MetaDescription = "Ted Talks India Nayi Soch";
     ViewBag.MetaURL = "http://sparkt.in/work/Ted";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ted-thum.jpg";
