--- a/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
+++ b/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | TED TALKS Google Cards";
+    ViewBag.Title = "Sparkt | Star Plus | TED TALKS Google Cards";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "TED TALKS Google Cards";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | TED TALKS Google Cards";
     ViewBag.MetaDescription = "Google Cards";
     ViewBag.MetaURL = "http://sparkt.in/work/TedGoogleCards";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ted-thum.jpg";
