--- a/Sparkt.WebApp/Views/work/TextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/TextMoji.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Text Moji";
+    ViewBag.Title = "Sparkt | Mahindra Mutual Fund | Text Moji";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Text Moji";
+    ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | Text Moji";
     ViewBag.MetaDescription = "ELEVATING MAHINDRA MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!";
     ViewBag.MetaURL = "http://sparkt.in/work/TextMoji";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/textmoji-thum.jpg";
