--- a/Sparkt.WebApp/Views/work/Tgilc.cshtml
+++ b/Sparkt.WebApp/Views/work/Tgilc.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | The Great Indian Laughter Challenge";
+    ViewBag.Title = "Sparkt | Star Plus | The Great Indian Laughter Challenge";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "The Great Indian Laughter Challenge";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | The Great Indian Laughter Challenge";
     ViewBag.MetaDescription = "Getting the nation to join in on a laughter riot with thumbstopping content";
     ViewBag.MetaURL = "http://sparkt.in/work/Tgilc";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/tgilc-thum.jpg";
