--- a/Sparkt.WebApp/Views/work/UCypher.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypher.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | UCypher";
+    ViewBag.Title = "Sparkt | USports | UCypher";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "UCypher";
+    ViewBag.MetaTitle = "Sparkt | USports | UCypher";
     ViewBag.MetaDescription = "Naya Sport. Naye Superstars.";
     ViewBag.MetaURL = "http://sparkt.in/work/UCypher";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
