--- a/Sparkt.WebApp/Views/work/UCypherInstafight.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypherInstafight.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | UCypher - Insta Fight";
+    ViewBag.Title = "Sparkt | USports | UCypher - Insta Fight";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "UCypher";
+    ViewBag.MetaTitle = "Sparkt | USports | UCypher - Insta Fight";
     ViewBag.MetaDescription = "Insta Fight";
     ViewBag.MetaURL = "http://sparkt.in/work/UCypher";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
