--- a/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "UCypher - Use Of Data Marketing Sciences";
+    ViewBag.Title = "Sparkt | USports | UCypher - Use Of Data Marketing Sciences";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "UCypher";
+    ViewBag.MetaTitle = "Sparkt | USports | UCypher - Use Of Data Marketing Sciences";
     ViewBag.MetaDescription = "Use Of Data Marketing Sciences";
     ViewBag.MetaURL = "http://sparkt.in/work/UCypherUseOfDataMS";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
