--- a/Sparkt.WebApp/Views/work/USports.cshtml
+++ b/Sparkt.WebApp/Views/work/USports.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | USports";
+    ViewBag.Title = "Sparkt | USports";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "USports";
+    ViewBag.MetaTitle = "Sparkt | USports ";
     ViewBag.MetaDescription = "A new-age multifaceted sports company";
     ViewBag.MetaURL = "http://sparkt.in/work/USports";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/usports-thum.jpg";
