--- a/Sparkt.WebApp/Views/work/USportsScratch.cshtml
+++ b/Sparkt.WebApp/Views/work/USportsScratch.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | USports - Scratch";
+    ViewBag.Title = "Sparkt | USports | Scratch";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "USports - Scratch";
+    ViewBag.MetaTitle = "Sparkt | USports - Scratch";
     ViewBag.MetaDescription = "Scratch to unlock the website";
     ViewBag.MetaURL = "http://sparkt.in/work/USportsScratch";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/usports-scratch-thum.jpg";
