--- a/Sparkt.WebApp/Views/work/WomensDay.cshtml
+++ b/Sparkt.WebApp/Views/work/WomensDay.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Women’s Day";
+    ViewBag.Title = "Sparkt | Star Plus | Women’s Day";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Women’s Day";
+    ViewBag.MetaTitle = "Sparkt | Star Plus | Women’s Day";
     ViewBag.MetaDescription = "Igniting a Nayi Soch to break gender stereotypes";
     ViewBag.MetaURL = "http://sparkt.in/work/WomensDay";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/womens-day-thum.jpg";
