--- a/Sparkt.WebApp/Views/work/bql.cshtml
+++ b/Sparkt.WebApp/Views/work/bql.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Boutique Living";
+    ViewBag.Title = "Sparkt | Boutique Living";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
     ViewBag.MetaTitle = "Boutique Living";
     ViewBag.MetaDescription = "Bringing a world-conquering brand to its homeland in India";
