--- a/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | MMF Textmoji";
+    ViewBag.Title = "Sparkt | Mahindra Mutual Fund | MMF Textmoji";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "MMF Textmoji";
+    ViewBag.MetaTitle = "Sparkt | Mahindra Mutual Fund | MMF Textmoji";
     ViewBag.MetaDescription = "ELEVATING MAHINDRA MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!";
     ViewBag.MetaURL = "http://sparkt.in/work/TextMoji";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/textmoji-thum.jpg";
