--- a/Sparkt.WebApp/Views/work/USportsHamburger.cshtml
+++ b/Sparkt.WebApp/Views/work/USportsHamburger.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | USports - Hamburger";
+    ViewBag.Title = "Sparkt | USports | Hamburger";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "USports - Hamburger";
+    ViewBag.MetaTitle = "Sparkt | USports - Hamburger";
     ViewBag.MetaDescription = "Bring alive the Hamburger menu!";
     ViewBag.MetaURL = "http://sparkt.in/work/USportsHamburger";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/usports-hamburger-thum.jpg";
