--- a/Sparkt.WebApp/Views/work/brickex.cshtml
+++ b/Sparkt.WebApp/Views/work/brickex.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | Brickex";
+    ViewBag.Title = "Sparkt | Piramal | Brickex";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Brickex";
+    ViewBag.MetaTitle = "Sparkt | Piramal | Brickex";
     ViewBag.MetaDescription = "India’s leading B2B platform providing real estate and financial services";
     ViewBag.MetaURL = "http://sparkt.in/work/brickex";
     ViewBag.MetaImage= "http://sparkt.in/Content/work/images/thums/brickex-thum.jpg";
