--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -65,6 +65,51 @@
 
     <script src='https://www.google.com/recaptcha/api.js?onload=myCallBack&render=explicit' async defer></script>
     <script src="~/Scripts/User/GoogleCaptcha.js"></script>
+    <script type="application/ld+json">
+        {
+        "@@context": "http://schema.org",
+        "@@type": "Organization",
+        "url": "http://www.sparkt.in/",
+        "logo": "https://www.sparkt.in//Content/images/spakt.png"
+        }
+    </script>
+    <script type="application/ld+json">
+        {
+        "@@context": "http://schema.org",
+        "@@type": "Organization",
+        "url": "http://www.sparkt.in/",
+        "name": "Sparkt",
+        "sameAs": [
+        "https://www.facebook.com/sparktindia",
+        "https://twitter.com/sparktindia",
+        "https://in.linkedin.com/company/sparkt-india",
+        "https://www.youtube.com/c/SparktIndia"
+        ]
+        }
+    </script>
+    <script type="application/ld+json">
+        {
+        "@@context":"http://schema.org",
+        "@@type":"ItemList",
+        "itemListElement":
+        [
+        { "@@type":"ListItem", "position":1,"url":"https://www.sparkt.in//Content/work/images/thums/ucypher-thum.jpg"},
+        { "@@type":"ListItem", "position":2,"url":"https://www.sparkt.in//Content/work/images/thums/ted-thum.jpg"},
+        { "@@type":"ListItem", "position":3,"url":"https://www.sparkt.in//Content/work/images/thums/hsubh-thum.jpg"},
+        { "@@type":"ListItem", "position":4,"url":"https://www.sparkt.in//Content/work/images/thums/ikyawann-thum.jpg"}
+        ]
+        }
+    </script>
+    <script type="application/ld+json">
+        {
+        "@@context": "http://schema.org",
+        "@@type": "PostalAddress",
+        "streetAddress": "408, Satellite Gazebo, Andheri-Ghatkopar Link Road, Chakala, Andheri (East), Mumbai, Maharashtra 400093",
+        "addressLocality": "Andheri",
+        "postalCode": "400093",
+        "addressCountry": "INDIA"
+        }
+    </script>
 </head>
 <body>
     @if (ViewBag.Page == "Home")
