New squad added

--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -149,7 +149,11 @@
             <i class="title-icon"><img src="~/Content/images/title-icon.png" alt=""></i>
             <h2>Offering</h2>
             <div class="clear"></div>
-            <div class="head-title-content"> </div>
+            <div class="head-title-content">
+                <p>
+                    Creating value and impact with in-depth products and services
+                </p>
+            </div>
         </div>
         <div class="container">
             <div class="offering-wrapp fadIn-wrapp">
@@ -706,6 +710,33 @@
                             <figcaption>
                                 <h5 class="ellipsify">Jr. Copywriter</h5>
                                 <h4 class="ellipsify"><span>Dhruv</span> </h4>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <span class="profile-img down-art "> <img src="~/Content/images/squad/mithul-rao.png" alt=""> </span>
+                            <figcaption>
+                                <h5 class="ellipsify">SR. Programmer</h5>
+                                <h4 class="ellipsify"><span>Mithul</span> Rao</h4>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <span class="profile-img "> <img src="~/Content/images/squad/rushabh-porwal.png" alt=""> </span>
+                            <figcaption>
+                                <h5 class="ellipsify">Intern</h5>
+                                <h4 class="ellipsify"><span>Rushabh</span></h4>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <span class="profile-img "> <img src="~/Content/images/squad/harsh-udeshi.png" alt=""> </span>
+                            <figcaption>
+                                <h5 class="ellipsify">Trainee</h5>
+                                <h4 class="ellipsify"><span>Harsh</span> Udeshi</h4>
                             </figcaption>
                         </figure>
                     </li>
@@ -1324,6 +1355,9 @@
             <i class="title-icon"><img src="~/Content/images/title-icon.png" alt=""></i>
             <h2>Showreel</h2>
             <div class="clear"></div>
+            <div class="head-title-content">
+                <p>Evolving digital storytelling with engaging forms and formats</p>
+            </div>
         </div>
         <div class="container">
             <div class="showreel-wrapp fadIn-wrapp">
