Structured Data Changes

--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -42,15 +42,15 @@
         {
         "@@context": "http://schema.org",
         "@@type": "Organization",
-        "url": "http://www.sparkt.in/",
-        "logo": "https://www.sparkt.in//Content/images/spakt.png"
+        "url": "https://www.sparkt.in",
+        "logo": "https://www.sparkt.in/Content/images/sparkt.png"
         }
     </script>
     <script type="application/ld+json">
         {
         "@@context": "http://schema.org",
         "@@type": "Organization",
-        "url": "http://www.sparkt.in/",
+        "url": "https://www.sparkt.in",
         "name": "Sparkt",
         "sameAs": [
         "https://www.facebook.com/sparktindia",
