--- a/Sparkt.WebApp/Views/work/brickex.cshtml
+++ b/Sparkt.WebApp/Views/work/brickex.cshtml
@@ -7,6 +7,19 @@
     ViewBag.MetaURL = "http://sparkt.in/work/brickex";
     ViewBag.MetaImage= "http://sparkt.in/Content/work/images/thums/brickex-thum.jpg";
 }
+<script type="application/ld+json">
+    {
+    "@@context": "http://schema.org",
+    "@@type": "VideoObject",
+    "name": "Brickex Video",
+    "@@id": "https://www.sparkt.in/Content/work/media/brickex-mob.mp4",
+    "url":"https://www.sparkt.in/Content/work/media/brickex-mob.mp4",
+    "description": "India’s leading B2B platform providing real estate and financial services.",
+    "duration": "T1M43S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/brickex-desktop.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 @section BodyClass {piramal}
 <main>
     <div class="section">
