--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -69,15 +69,15 @@
         {
         "@@context": "http://schema.org",
         "@@type": "Organization",
-        "url": "http://www.sparkt.in/",
-        "logo": "https://www.sparkt.in//Content/images/spakt.png"
+        "url": "https://www.sparkt.in",
+        "logo": "https://www.sparkt.in/Content/images/sparkt.png"
         }
     </script>
     <script type="application/ld+json">
         {
         "@@context": "http://schema.org",
         "@@type": "Organization",
-        "url": "http://www.sparkt.in/",
+        "url": "https://www.sparkt.in",
         "name": "Sparkt",
         "sameAs": [
         "https://www.facebook.com/sparktindia",
@@ -93,39 +93,39 @@
         "@@type":"ItemList",
         "itemListElement":
         [
-        { "@@type":"ListItem", "position":1,"url":"https://www.sparkt.in//Content/work/images/thums/ucypher-thum.jpg"},
-        { "@@type":"ListItem", "position":2,"url":"https://www.sparkt.in//Content/work/images/thums/ted-thum.jpg"},
-        { "@@type":"ListItem", "position":3,"url":"https://www.sparkt.in//Content/work/images/thums/hsubh-thum.jpg"},
-        { "@@type":"ListItem", "position":4,"url":"https://www.sparkt.in//Content/work/images/thums/ikyawann-thum.jpg"},
-        { "@@type":"ListItem", "position":5,"url":"https://www.sparkt.in//Content/work/images/thums/tah-thum.jpg"},
-        { "@@type":"ListItem", "position":6,"url":"https://www.sparkt.in//Content/work/images/thums/nayosoch-thum.jpg"},
-        { "@@type":"ListItem", "position":7,"url":"https://www.sparkt.in//Content/work/images/thums/womens-day-thum.jpg"},
-        { "@@type":"ListItem", "position":8,"url":"https://www.sparkt.in//Content/work/images/thums/mouthers-day-thum.jpg"},
-        { "@@type":"ListItem", "position":9,"url":"https://www.sparkt.in//Content/work/images/thums/mahindra-unnati-thum.jpg"},
-        { "@@type":"ListItem", "position":10,"url":"https://www.sparkt.in//Content/work/images/thums/ted-google-cards-thum.jpg"},
-        { "@@type":"ListItem", "position":11,"url":"https://www.sparkt.in//Content/work/images/thums/textmoji-thum.jpg"},
-        { "@@type":"ListItem", "position":12,"url":"https://www.sparkt.in//Content/work/images/thums/hspubh-thum.jpg"},
-        { "@@type":"ListItem", "position":13,"url":"https://www.sparkt.in//Content/work/images/thums/u-cypher-insta-fight-thum.jpg"},
-        { "@@type":"ListItem", "position":14,"url":"https://www.sparkt.in//Content/work/images/thums/usports-scratch-thum.jpg"},
-        { "@@type":"ListItem", "position":15,"url":"https://www.sparkt.in//Content/work/images/thums/usports-hamburger-thum.jpg"},
-        { "@@type":"ListItem", "position":16,"url":"https://www.sparkt.in//Content/work/images/thums/mmf-thum.jpg"},
-        { "@@type":"ListItem", "position":17,"url":"https://www.sparkt.in//Content/work/images/thums/pow-thum.jpg"},
-        { "@@type":"ListItem", "position":18,"url":"https://www.sparkt.in//Content/work/images/thums/danceplus-thum.jpg"},
-        { "@@type":"ListItem", "position":19,"url":"https://www.sparkt.in//Content/work/images/thums/usports-thum.jpg"},
-        { "@@type":"ListItem", "position":20,"url":"https://www.sparkt.in//Content/work/images/thums/phfl-thum.jpg"},
-        { "@@type":"ListItem", "position":21,"url":"https://www.sparkt.in//Content/work/images/thums/piramalcapital-thum.jpg"},
-        { "@@type":"ListItem", "position":22,"url":"https://www.sparkt.in//Content/work/images/thums/swp-thum.jpg"},
-        { "@@type":"ListItem", "position":23,"url":"https://www.sparkt.in//Content/work/images/thums/brickex-thum.jpg"},
-        { "@@type":"ListItem", "position":24,"url":"https://www.sparkt.in//Content/work/images/thums/india-rf-thum.jpg"},
-        { "@@type":"ListItem", "position":25,"url":"https://www.sparkt.in//Content/work/images/thums/boutique-thum.jpg"},
-        { "@@type":"ListItem", "position":26,"url":"https://www.sparkt.in//Content/work/images/thums/mGage-thum.jpg"},
-        { "@@type":"ListItem", "position":27,"url":"https://www.sparkt.in//Content/work/images/thums/kullfi-thum.jpg"},
-        { "@@type":"ListItem", "position":28,"url":"https://www.sparkt.in//Content/work/images/thums/khichadi-thum.jpg"},
-        { "@@type":"ListItem", "position":29,"url":"https://www.sparkt.in//Content/work/images/thums/nach-baliye-8-thum.jpg"},
-        { "@@type":"ListItem", "position":30,"url":"https://www.sparkt.in//Content/work/images/thums/tgilc-thums.jpg"},
-        { "@@type":"ListItem", "position":31,"url":"https://www.sparkt.in//Content/work/images/thums/oneplus-thum.jpg"},
-        { "@@type":"ListItem", "position":32,"url":"https://www.sparkt.in//Content/work/images/thums/junglebook-thum.jpgg"},
-        { "@@type":"ListItem", "position":33,"url":"https://www.sparkt.in//Content/work/images/thums/ishqbaaaz-thum.jpg"}
+        { "@@type":"ListItem", "position":1,"url":"https://www.sparkt.in/Content/work/images/thums/ucypher-thum.jpg"},
+        { "@@type":"ListItem", "position":2,"url":"https://www.sparkt.in/Content/work/images/thums/ted-thum.jpg"},
+        { "@@type":"ListItem", "position":3,"url":"https://www.sparkt.in/Content/work/images/thums/hsubh-thum.jpg"},
+        { "@@type":"ListItem", "position":4,"url":"https://www.sparkt.in/Content/work/images/thums/ikyawann-thum.jpg"},
+        { "@@type":"ListItem", "position":5,"url":"https://www.sparkt.in/Content/work/images/thums/tah-thum.jpg"},
+        { "@@type":"ListItem", "position":6,"url":"https://www.sparkt.in/Content/work/images/thums/nayosoch-thum.jpg"},
+        { "@@type":"ListItem", "position":7,"url":"https://www.sparkt.in/Content/work/images/thums/womens-day-thum.jpg"},
+        { "@@type":"ListItem", "position":8,"url":"https://www.sparkt.in/Content/work/images/thums/mouthers-day-thum.jpg"},
+        { "@@type":"ListItem", "position":9,"url":"https://www.sparkt.in/Content/work/images/thums/mahindra-unnati-thum.jpg"},
+        { "@@type":"ListItem", "position":10,"url":"https://www.sparkt.in/Content/work/images/thums/ted-google-cards-thum.jpg"},
+        { "@@type":"ListItem", "position":11,"url":"https://www.sparkt.in/Content/work/images/thums/textmoji-thum.jpg"},
+        { "@@type":"ListItem", "position":12,"url":"https://www.sparkt.in/Content/work/images/thums/hspubh-thum.jpg"},
+        { "@@type":"ListItem", "position":13,"url":"https://www.sparkt.in/Content/work/images/thums/u-cypher-insta-fight-thum.jpg"},
+        { "@@type":"ListItem", "position":14,"url":"https://www.sparkt.in/Content/work/images/thums/usports-scratch-thum.jpg"},
+        { "@@type":"ListItem", "position":15,"url":"https://www.sparkt.in/Content/work/images/thums/usports-hamburger-thum.jpg"},
+        { "@@type":"ListItem", "position":16,"url":"https://www.sparkt.in/Content/work/images/thums/mmf-thum.jpg"},
+        { "@@type":"ListItem", "position":17,"url":"https://www.sparkt.in/Content/work/images/thums/pow-thum.jpg"},
+        { "@@type":"ListItem", "position":18,"url":"https://www.sparkt.in/Content/work/images/thums/danceplus-thum.jpg"},
+        { "@@type":"ListItem", "position":19,"url":"https://www.sparkt.in/Content/work/images/thums/usports-thum.jpg"},
+        { "@@type":"ListItem", "position":20,"url":"https://www.sparkt.in/Content/work/images/thums/phfl-thum.jpg"},
+        { "@@type":"ListItem", "position":21,"url":"https://www.sparkt.in/Content/work/images/thums/piramalcapital-thum.jpg"},
+        { "@@type":"ListItem", "position":22,"url":"https://www.sparkt.in/Content/work/images/thums/swp-thum.jpg"},
+        { "@@type":"ListItem", "position":23,"url":"https://www.sparkt.in/Content/work/images/thums/brickex-thum.jpg"},
+        { "@@type":"ListItem", "position":24,"url":"https://www.sparkt.in/Content/work/images/thums/india-rf-thum.jpg"},
+        { "@@type":"ListItem", "position":25,"url":"https://www.sparkt.in/Content/work/images/thums/boutique-thum.jpg"},
+        { "@@type":"ListItem", "position":26,"url":"https://www.sparkt.in/Content/work/images/thums/mGage-thum.jpg"},
+        { "@@type":"ListItem", "position":27,"url":"https://www.sparkt.in/Content/work/images/thums/kullfi-thum.jpg"},
+        { "@@type":"ListItem", "position":28,"url":"https://www.sparkt.in/Content/work/images/thums/khichadi-thum.jpg"},
+        { "@@type":"ListItem", "position":29,"url":"https://www.sparkt.in/Content/work/images/thums/nach-baliye-8-thum.jpg"},
+        { "@@type":"ListItem", "position":30,"url":"https://www.sparkt.in/Content/work/images/thums/tgilc-thums.jpg"},
+        { "@@type":"ListItem", "position":31,"url":"https://www.sparkt.in/Content/work/images/thums/oneplus-thum.jpg"},
+        { "@@type":"ListItem", "position":32,"url":"https://www.sparkt.in/Content/work/images/thums/junglebook-thum.jpgg"},
+        { "@@type":"ListItem", "position":33,"url":"https://www.sparkt.in/Content/work/images/thums/ishqbaaaz-thum.jpg"}
         ]
         }
     </script>
@@ -137,6 +137,19 @@
         "addressLocality": "Andheri",
         "postalCode": "400093",
         "addressCountry": "INDIA"
+        }
+    </script>
+    <script type="application/ld+json">
+        {
+        "@@context": "http://schema.org",
+        "@@type": "VideoObject",
+        "name": "Sparkt Office Video",
+        "@@id": "https://www.sparkt.in/Content/media/sparkt-office.mp4",
+        "url":"https://www.sparkt.in/Content/media/sparkt-office.mp4",
+        "description": "Sparkt office walk through.",
+        "duration": "T41S",
+        "thumbnailUrl":"https://www.sparkt.in/Content/images/office-video-thumbnail.PNG",
+        "uploadDate":"05/01/2018"
         }
     </script>
 </head>
