Structured data for work videos

--- a/Sparkt.WebApp/Views/work/DancePlus2.cshtml
+++ b/Sparkt.WebApp/Views/work/DancePlus2.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/danceplus-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "http://schema.org",
+    "@@type": "VideoObject",
+    "name": "Dance+2 Video",
+    "@@id": "https://www.sparkt.in/Content/work/media/socailMediavideo1.mp4",
+    "url":"https://www.sparkt.in/Content/work/media/socailMediavideo1.mp4",
+    "description": "Getting the nation to dance to our tune with video innovations and thumbstopping content",
+    "duration": "T7S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/media/socailMediavideo1.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
