--- a/Sparkt.WebApp/Views/work/PiramalCapital.cshtml
+++ b/Sparkt.WebApp/Views/work/PiramalCapital.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/piramalcapital-thum.jpg";
 }
 @section BodyClass {piramal}
+<script type="application/ld+json">
+    {
+    "@@context": "http://schema.org",
+    "@@type": "VideoObject",
+    "name": "Piramal Capital Video",
+    "@@id": "https://www.sparkt.in/Content/work/media/piramal-desktop.mp4",
+    "url":"https://www.sparkt.in/Content/work/media/piramal-desktop.mp4",
+    "description": "Web and mobile ecosystem to reflect Piramal Capital's unprecedented growth story",
+    "duration": "T2M28S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/piramal-capital-mobile.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
