--- a/Sparkt.WebApp/Views/work/UCypherInstafight.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypherInstafight.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
 @section BodyClass {usports}
+<script type="application/ld+json">
+    {
+    "@@context": "http://schema.org",
+    "@@type": "VideoObject",
+    "name": "UCypher Video",
+    "@@id": "https://www.sparkt.in/Content/work/media/insta-fight.mp4",
+    "url":"https://www.sparkt.in/Content/work/media/insta-fight.mp4",
+    "description": "Creating Gamers Delight With An Interactive Innovation on instagram storie",
+    "duration": "T16S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/insta-fight-video-cover.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
