--- a/Sparkt.WebApp/Views/work/USports.cshtml
+++ b/Sparkt.WebApp/Views/work/USports.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/usports-thum.jpg";
 }
 @section BodyClass {usports}
+<script type="application/ld+json">
+    {
+    "@@context": "http://schema.org",
+    "@@type": "VideoObject",
+    "name": "USports Video",
+    "@@id": "https://www.sparkt.in/Content/work/media/usports-desktop.mp4",
+    "url":"https://www.sparkt.in/Content/work/media/usports-desktop.mp4",
+    "description": "A new-age multifaceted sports company",
+    "duration": "T1M34S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/usports-desktop.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
