--- a/Sparkt.WebApp/Views/work/USportsScratch.cshtml
+++ b/Sparkt.WebApp/Views/work/USportsScratch.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/usports-scratch-thum.jpg";
 }
 @section BodyClass {usports}
+<script type="application/ld+json">
+    {
+    "@@context": "http://schema.org",
+    "@@type": "VideoObject",
+    "name": "Scratch Video",
+    "@@id": "https://www.sparkt.in/Content/work/media/usports-scratch.mp4",
+    "url":"https://www.sparkt.in/Content/work/media/usports-scratch.mp4",
+    "description": "Scratch to unlock the website",
+    "duration": "T6S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/usports-scratch.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
