--- a/Sparkt.WebApp/Views/work/USportsHamburger.cshtml
+++ b/Sparkt.WebApp/Views/work/USportsHamburger.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/usports-hamburger-thum.jpg";
 }
 @section BodyClass {usports}
+<script type="application/ld+json">
+    {
+    "@@context": "http://schema.org",
+    "@@type": "VideoObject",
+    "name": "Hamburger Video",
+    "@@id": "https://www.sparkt.in/Content/work/media/usports-hamburger.mp4",
+    "url":"https://www.sparkt.in/Content/work/media/usports-hamburger.mp4",
+    "description": "Bring alive the Hamburger menu!",
+    "duration": "T7S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/usports-hamnurger-cover.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
